--- a/paspaspas/Paspaspas.csproj
+++ b/paspaspas/Paspaspas.csproj
@@ -234,6 +234,8 @@
     <Compile Include="Internal\Parser\Syntax\WhileStatement.cs" />
     <Compile Include="Internal\Parser\Syntax\WithStatement.cs" />
     <Compile Include="Internal\Tokenizer\CharacterClass.cs" />
+    <Compile Include="Internal\Tokenizer\MacroProcessor.cs" />
+    <Compile Include="Internal\Tokenizer\PreprocessorPunctuators.cs" />
     <Compile Include="Internal\Tokenizer\PunctuatorGroup.cs" />
     <Compile Include="Internal\Tokenizer\Punctuators.cs" />
     <Compile Include="Internal\Tokenizer\StandardPunctuators.cs" />
