--- a/paspaspas/Paspaspas.csproj
+++ b/paspaspas/Paspaspas.csproj
@@ -44,6 +44,8 @@
   <ItemGroup>
     <Compile Include="Api\CompilerTask.cs" />
     <Compile Include="Api\Options\Alignment.cs" />
+    <Compile Include="Api\Options\AppType.cs" />
+    <Compile Include="Api\Options\BooleanEvaluation.cs" />
     <Compile Include="Api\Options\CompilerOptions.cs" />
     <Compile Include="Internal\Input\FileInput.cs" />
     <Compile Include="Api\IParserInformationProvider.cs" />
