--- a/paspaspas/Paspaspas.csproj
+++ b/paspaspas/Paspaspas.csproj
@@ -49,6 +49,9 @@
     <Compile Include="Api\Options\CodeAlignment.cs" />
     <Compile Include="Api\Options\CompileOptions.cs" />
     <Compile Include="Api\Options\CompilerOptions.cs" />
+    <Compile Include="Api\Options\ConditionalCompilationOptions.cs" />
+    <Compile Include="Api\Options\ConditonalDefine.cs" />
+    <Compile Include="Api\Options\DerivedListOption.cs" />
     <Compile Include="Internal\Input\FileInput.cs" />
     <Compile Include="Api\IParserInformationProvider.cs" />
     <Compile Include="Api\Input\IParserInput.cs" />
